# TileOPs

./: .gitignore  .pre-commit-config.yaml  Claude.md  README.md  pyproject.toml
.claude/skills/migrating-new-op/: SKILL.md
.github/ISSUE_TEMPLATE/: new_operator.md  new_operator_subtask.md
benchmarks/: benchmark.py
benchmarks/deepseek_mla/: fp8_quant.py  topk_selector.py
benchmarks/deepseek_nsa/: deepseek_nsa.py
docs/: DEVELOPMENT.md
tests/ops/: test_grouped_gemm.py
tileops/: __init__.py
tileops/kernels/grouped_gemm/: grouped_gemm.py
