[project]
name = "tileops"
version = "0.0.1.dev2"
description = "TileOPs kernels for efficient LLM inference."
readme = "README.md"
authors = [{ name="Tile-AI"}]
dependencies = [
    "torch>=2.1.0",
    "tilelang==0.1.8",
    "einops",
]
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["llm", "inference", "gpu", "kernel", "tiling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/tile-ai/TileOPs"
Repository = "https://github.com/tile-ai/TileOPs"
Issues = "https://github.com/tile-ai/TileOPs/issues"

[project.optional-dependencies]
dev = [
    "ruff==0.14.13",
    "codespell==2.4.1",
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "tests.*", "benchmarks", "benchmarks.*"]

[tool.codespell]
ignore-words-list = "nd, te, ist, LOD, offen, NotIn, HSA"
skip = [
    "build",
    "dist",
    ".venv"
]

[tool.ruff]
line-length = 100

# NOTE: Please gradually tighten static code checks and other validations in the future.
# The current exemptions are in place to ensure normal project development.
[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    # "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    # "I",
    # pydocstyle (Google Docstrings)
    # "D",
    # pep8-naming (naming conventions)
    "N",
    # flake8-annotations (type hints)
    "ANN",
]
ignore = [
    # ambiguous name
    "E741",
    # line too long (allow some flexibility)
    "E501",
    # key in dict.keys()
    "SIM118",
    # memory leaks
    "B019",
    # No such file or directory
    "E902",
    # flake8-annotations: ignore self/cls/args/kwargs/special methods
    # Note: ANN101 and ANN102 were removed in ruff 0.8.0+, so they are not included here
    "ANN002", "ANN003", "ANN204",
    # flake8-annotations: ignore missing type annotations (too many in codebase)
    "ANN001",  # Missing type annotation for function argument
    "ANN201",  # Missing return type annotation for public function
    "ANN202",  # Missing return type annotation for private function
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    # pep8-naming: allow 'import as T'
    "N812",
    # pep8-naming: ignore naming convention violations (common in ML/kernel code)
    "N801",  # Class name should use CapWords convention
    "N802",  # Function name should be lowercase
    "N803",  # Argument name should be lowercase
    "N806",  # Variable in function should be lowercase
]

[tool.ruff.lint.isort]
known-first-party = ["tileops"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
